# Quake4-Chinese

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  LICENSE-FONTS.txt  README.md  README_EN.md  requirements.txt
.github/workflows/: package.yml
docs/: MEMORY.md  english-subtitles-plan.md  glossary.md  localization-guide.md  quake4-dist-package.md  quake4-feedback-fixes-r3.md  quake4-feedback-fixes-r4.md  quake4-font-aspect-and-size.md  quake4-poc-passed.md  quake4-r6-crash-and-subtitles.md  quake4-r9-mcc-align-repo-strogg.md  quake4-strogg-changeover.md
screenshots/: .gitkeep
src/engine-patches/: 0001-quake4-cn-runtime.patch  README.md  Subtitles.cpp  Subtitles.h
src/installer/: CMakeLists.txt  README.md  build.ps1  installer.py  verify_bundle.py
src/installer/launcher/: launcher.manifest  launcher.rc  main.cpp
src/installer/tests/: engine_stub.cs  test_installer.py
src/tools/: build_dist_extras.py  build_lang.py  consistency_sweep.py  export_font.py  extract_translation_tables.py  fix_squads.py  gen_radio_decls.py  merge_batches.py  package_release.ps1  parse_fontdat.py  patch_hud.py  patch_mainmenu.py  patch_wristcomm.py  split_batches.py  update_lips_context.py
src/translations/: ai_vo_gap.tsv  dialogue_lips.tsv  qa_doubts.txt  radio_chatter.tsv  ui_code.tsv  ui_guis.tsv  ui_mappack.tsv  ui_maps.tsv
